# agent-brain

./: .dockerignore  .env.example  .gitignore  .mcp.json.example  CLAUDE.md  CLAUDE_TODO.md  Cargo.toml  Dockerfile  Dockerfile.ci  HANDOFF.md  HBI_PLAN.md  PLAN.md  README.md  ROADMAP.md  STATUS.md  TODO.md  USAGE.md  architecture_context.md  brain_logs.db  docker-compose.yml  entrypoint.sh  models.yaml  openapi.yaml
.gemini/: settings.json
.githooks/: post-commit  pre-commit
.github/workflows/: api-contract.yml  ci.yml
contexts/: api-builder.yaml  boot.yaml  code-analyst.yaml  developer.yaml  general.yaml  init.yaml  knowledge-worker.yaml  researcher.yaml  scheduler.yaml  task-manager.yaml
crates/app/: Cargo.toml
crates/app/src/: brain_core.rs  cli.rs  config.rs  lib.rs  logging.rs  main.rs  repl.rs
crates/app/src/clients/: chat.rs  mod.rs  rest.rs
crates/app/src/mcp/: auth.rs  http_transport.rs  mod.rs  protocol.rs  server.rs  session.rs  tools.rs  transport.rs  transport_trait.rs
crates/app/src/services/: chat.rs  context_builder.rs  knowledge.rs  llm.rs  mod.rs  model_config.rs  model_selector.rs  procedure_executor.rs  queue.rs  resource_registry.rs  scheduler.rs  shared_llm.rs  store_impls.rs  traits.rs
crates/app/src/services/llm_providers/: anthropic.rs  gemini.rs  mod.rs  ollama.rs  openai_compat.rs
crates/app/src/services/secrets/: aws.rs  error.rs  local.rs  mod.rs  provider.rs  vault.rs
crates/app/src/skills/: agent.rs  codebase.rs  context.rs  dynamic.rs  git.rs  http.rs  knowledge.rs  mod.rs  model.rs  procedure.rs  query.rs  resource.rs  scheduler.rs  search.rs  sleep.rs  task.rs  test_helpers.rs  todo.rs  working_memory.rs  ws.rs
crates/app/tests/: http_transport_test.rs  task_test.rs
crates/app/tests/common/: mod.rs
crates/models/: Cargo.toml
crates/models/src/: agent_job.rs  dead_letter.rs  lib.rs  procedure.rs  provenance.rs  scheduled_task.rs  task.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: lib.rs  params.rs  queue.rs  skill.rs  sse_notifier.rs  tool_handler.rs  types.rs
crates/repository/: Cargo.toml
crates/repository/src/: agent_job.rs  client.rs  error.rs  lib.rs  model_spec.rs  scheduled_task.rs  task.rs  telemetry.rs  todo.rs
docs/: EXECUTIVE-SUMMARY.md  NEXTSTEP.md  ONE-PAGER-QA.md  PLAN.md  README_DUCKDB.md  REFACTOR_PLAN.md  SLIDE-DECK-GUIDE.md  STATUS.md  TODO.md  USAGE.md
hbi-frontend/: index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
hbi-frontend/src/: App.tsx  index.css
hbi-frontend/src/api/: chat.ts  config.ts  mcp.ts
hbi-frontend/src/components/architecture/: ArchitecturePanel.tsx
hbi-frontend/src/components/chat/: ChatPanel.tsx
hbi-frontend/src/components/graph/: GraphPanel.tsx
hbi-frontend/src/components/knowledge/: KnowledgePanel.tsx
hbi-frontend/src/components/logs/: LogsPanel.tsx
hbi-frontend/src/components/proposals/: ProposalsPanel.tsx
hbi-frontend/src/components/scheduled-tasks/: ScheduledTasksPanel.tsx
hbi-frontend/src/components/settings/: SettingsModal.tsx
hbi-frontend/src/components/tasks/: TaskPanel.tsx
hbi-frontend/src/components/todo/: TodoPanel.tsx
hbi-frontend/src/components/tools/: ToolPanel.tsx
hbi-frontend/src/styles/: main.css
project-docs/: GENERIC_TOOLS_REFACTOR.md  STATUS.md  TODO.md  USAGE.md  architecture.md  architecture_context.md  cli.md  env.md  schema.md  tools.md
scripts/: self_learn.py  self_reflect.py  self_update.py  session.env
src/: cli.rs  config.rs  lib.rs  logging.rs  main.rs
src/mcp/: auth.rs  http_transport.rs  mod.rs  protocol.rs  server.rs  session.rs  tools.rs  transport.rs
src/models/: credential.rs  endpoint.rs  healing.rs  mod.rs  model_spec.rs  parameter.rs  resource.rs  schema.rs  task.rs
src/repository/: admin.rs  agent_job.rs  client.rs  credential.rs  endpoint.rs  healing.rs  mod.rs  model_spec.rs  parameter.rs  resource.rs  schema.rs  task.rs  telemetry.rs
src/services/: chat.rs  context.rs  context_builder.rs  discovery.rs  docgen.rs  healing.rs  http.rs  knowledge.rs  llm.rs  mod.rs  model_selector.rs  openapi.rs  procedure_executor.rs  queue.rs  repo.rs  resource_registry.rs  scheduler.rs  sleep.rs  snapshot.rs
src/services/export/: builder.rs  differ.rs  exporter.rs  mod.rs  report.rs
src/services/llm_providers/: anthropic.rs  gemini.rs  mod.rs  ollama.rs  openai_compat.rs
src/services/secrets/: aws.rs  local.rs  manager.rs  mod.rs  vault.rs
src/skills/: admin.rs  agent.rs  api.rs  context.rs  dynamic.rs  knowledge.rs  mod.rs  model.rs  procedure.rs  resource.rs  scheduler.rs  search.rs  sleep.rs  task.rs  working_memory.rs  ws.rs
stakeholder-docs/: 01-overview.md  02-architecture.md  03-workflows.md  04-use-cases.md  05-data-flows.md  06-skill-reference.md  README.md
telemetry/: telemetry.duckdb.wal
tests/: context_tools_test.rs  discovery_test.rs  docgen_test.rs  http_transport_test.rs  repo_analyzer_test.rs  repository_test.rs  task_test.rs
tests/common/: mod.rs
tests/fixtures/: petstore.json
