[package]
name = "agent-api"
version = "0.1.0"
edition = "2024"

[lib]
name = "agent_api"
path = "src/lib.rs"

[[bin]]
name = "agent-api"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Neo4j graph database
neo4rs = "0.8"

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# URL parsing
url = "2"

# HTML parsing for discovery
scraper = "0.21"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Schema generation for MCP tools
schemars = "0.8"

# Date/time and UUIDs
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Configuration
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }

# OpenAPI parsing
openapiv3 = "2"

# Encryption for local secret provider
aes-gcm = "0.10"
rand = "0.8"

# AWS Secrets Manager
aws-config = { version = "1.5", features = ["behavior-version-latest"] }
aws-sdk-secretsmanager = "1.54"

# Base64 encoding for Basic auth
base64 = "0.22"

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.6"
testcontainers = "0.23"
testcontainers-modules = { version = "0.11", features = ["neo4j"] }
temp-env = "0.3"
tempfile = "3"
