[workspace]
members = ["crates/app", "crates/models", "crates/repository", "crates/protocol"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Neo4j graph database
neo4rs = "0.8"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Schema generation for MCP tools
schemars = "0.8"

# Date/time and UUIDs
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Async traits
async-trait = "0.1"

# YAML parsing (model catalog)
serde_yaml = "0.9"

# Local Analytics & Logging (The Hippocampus)
duckdb = { version = "1.0", features = ["bundled"] }
